RESOLVED FIXED186551
NetworkLoadChecker should not need to hard ref NetworkConnectionToWebProcess
https://bugs.webkit.org/show_bug.cgi?id=186551
Summary NetworkLoadChecker should not need to hard ref NetworkConnectionToWebProcess
youenn fablet
Reported 2018-06-11 17:47:29 PDT
This is unnecessary and if ping loads last for long, it can keep NetworkConnectionToWebProcess alive for more time than it should
Attachments
Patch (19.91 KB, patch)
2018-06-14 16:01 PDT, youenn fablet
no flags
Patch for landing (22.76 KB, patch)
2018-06-27 13:01 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2018-06-14 16:01:05 PDT
Alex Christensen
Comment 2 2018-06-18 10:22:04 PDT
Comment on attachment 342772 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=342772&action=review Looks good to me. > Source/WebCore/page/csp/ContentSecurityPolicy.h:172 > + void setClient(ContentSecurityPolicyClient* client) { m_client = client; } Ask Dan how he feels about this. > Source/WebKit/NetworkProcess/NetworkLoadChecker.cpp:200 > + contentSecurityPolicy->setClient(client); > + bool isAllowed = isAllowedByContentSecurityPolicy(request); > + contentSecurityPolicy->setClient(nullptr); > + if (!isAllowed) { This definitely has room for improvement.
youenn fablet
Comment 3 2018-06-27 13:01:00 PDT
Created attachment 343742 [details] Patch for landing
WebKit Commit Bot
Comment 4 2018-06-27 14:15:30 PDT
Comment on attachment 343742 [details] Patch for landing Clearing flags on attachment: 343742 Committed r233277: <https://trac.webkit.org/changeset/233277>
WebKit Commit Bot
Comment 5 2018-06-27 14:15:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-06-27 14:16:26 PDT
Note You need to log in before you can comment on or make changes to this bug.