NetworkLoadChecker should not need to hard ref NetworkConnectionToWebProcess https://bugs.webkit.org/show_bug.cgi?id=186551

Reviewed by Daniel Bates.

Source/WebCore:

No change of behavior.
Add a way to set the client receiving any CSP warning/error notification.

* page/csp/ContentSecurityPolicy.h:
(WebCore::ContentSecurityPolicy::setClient):

Source/WebKit:

Removed the need for NetworkLoadChecker to reference a NetworkConnectionToWebProcess.
Instead a CSP client is given to NetworkLoadChecker when needed.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::loadPing):
* NetworkProcess/NetworkLoadChecker.cpp:
(WebKit::NetworkLoadChecker::NetworkLoadChecker):
(WebKit::NetworkLoadChecker::check):
(WebKit::NetworkLoadChecker::checkRedirection):
(WebKit::NetworkLoadChecker::checkRequest):
(WebKit::NetworkLoadChecker::contentSecurityPolicy):
(WebKit::NetworkLoadChecker::addConsoleMessage): Deleted.
(WebKit::NetworkLoadChecker::sendCSPViolationReport): Deleted.
(WebKit::NetworkLoadChecker::enqueueSecurityPolicyViolationEvent): Deleted.
* NetworkProcess/NetworkLoadChecker.h:
* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::start):
(WebKit::NetworkResourceLoader::willSendRedirectedRequest):
* NetworkProcess/PingLoad.cpp:
(WebKit::PingLoad::PingLoad):
(WebKit::PingLoad::willPerformHTTPRedirection):
* NetworkProcess/PingLoad.h:


Canonical link: https://commits.webkit.org/202365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233277 268f45cc-cd09-0410-ab3c-d52691b4dbfc